# frames-bool-inference-too-high

./: README.md  frames-bool-inference-too-high.cabal  stack.yaml  wrongboolinference.csv
app/: Main.hs
